minor fix to overlapping components

--- a/styles/about.module.css
+++ b/styles/about.module.css
@@ -1,6 +1,6 @@
 .aboutPageContainer {
   width: 100%;
-  height: 80vh;
+  padding-top: 70px;
   display: flex;
   flex-direction: column;
   justify-content: center;
