--- a/styles/homepage.module.css
+++ b/styles/homepage.module.css
@@ -1,5 +1,6 @@
 .homePageContainer {
   width: 100%;
+  padding-top: 70px;
   display: flex;
   flex-direction: column;
   justify-content: center;
